refactor codigo